Update README with JavaFX compile and run details
Added compilation and run instructions for JavaFX.